@@ -1,3 +1,8 @@
+2003-09-19	Joel Sherrill <joel@OARcorp.com>
+
+	* analog.t, bsp_howto.texi, discrete.t, nvmem.t, target.t: Merge from
+	branch.
+
 2003-08-22	Joel Sherrill <joel@OARcorp.com>
 
 	* adaintr.t, ata.t, target.t: Reconcile differences between CVS trunk
